Tela de Pesquisa Responsável 50% pronta. Falta a parte de EDITAR, VISUALIZAR, DELETAR

--- a/SistemaEscolaDeNatacao/src/telas/TelaPrincipal.form
+++ b/SistemaEscolaDeNatacao/src/telas/TelaPrincipal.form
@@ -16,6 +16,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenuHomeMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuHomeActionPerformed"/>
           </Events>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenuCadastrar">
